common/force-app/main/default/objects/Payment_Session__c/Payment_Session__c.object-meta.xml
<CustomObject>
    <description>To manage and track all aspects of a user&apos;s payment process within an application. It encapsulates various fields that collectively ensure the secure, efficient, and compliant handling of payment transactions.</description>
    <label>Payment Session</label>
    <nameField>
        <label>Payment Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>