common/force-app/main/default/objects/Payment_Session__c/fields/Captcha_Verified__c.field-meta.xml
<CustomField>
    <fullName>Captcha_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the payment session has been captcha verified</description>
    <inlineHelpText>Indicates if the payment session has been captcha verified</inlineHelpText>
    <label>Captcha Verified</label>
    <type>Checkbox</type>
</CustomField>