common/force-app/main/default/objects/Payment_Session__c/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <description>The expiration time of the payment session, which is calculated as 10 minutes after the session is created.</description>
    <formula>CreatedDate + (10/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This session will expire 5 minutes after creation unless it is accessed or extended.</inlineHelpText>
    <label>Expires</label>
    <type>DateTime</type>
</CustomField>