common/force-app/main/default/objects/Payment_Session__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>The geographical location associated with the session, if available.</description>
    <inlineHelpText>Displays the geographical location (latitude and longitude) from where the session was initiated.</inlineHelpText>
    <label>Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>