common/force-app/main/default/objects/Payment_Session__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the session to the associated Investment record.</description>
    <inlineHelpText>Select the Investment record associated with this session.</inlineHelpText>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Payment Sessions</relationshipLabel>
    <relationshipName>Payment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>