common/force-app/main/default/objects/Payment_Session__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>The IP address of the user who initiated the payment session.</description>
    <inlineHelpText>Displays the IP address of the user who started this session.</inlineHelpText>
    <label>User IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>