common/force-app/main/default/objects/Payment_Session__c/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <description>Date/Time of the last activity recorded by the user on the checkout</description>
    <label>Last Activity</label>
    <type>DateTime</type>
</CustomField>