common/force-app/main/default/objects/Payment_Session__c/fields/Last_API_Call_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_API_Call_DateTime__c</fullName>
    <description>The date and time when the last API call was made during the session.</description>
    <inlineHelpText>Indicates when the last API call occurred within this session.</inlineHelpText>
    <label>Last API Call DateTime</label>
    <type>DateTime</type>
</CustomField>