common/force-app/main/default/objects/Payment_Session__c/fields/Last_API_Call_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_API_Call_Name__c</fullName>
    <description>The name of the last API call made during the session.</description>
    <inlineHelpText>Displays the name of the last API call made within this session.</inlineHelpText>
    <label>Last API Call Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>