common/force-app/main/default/objects/Payment_Session__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This shows if there is a lead related to the payment session</description>
    <inlineHelpText>This shows if there is a lead related to the payment session</inlineHelpText>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Payment Sessions</relationshipLabel>
    <relationshipName>Payment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>