common/force-app/main/default/objects/Payment_Session__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the session to the associated Opportunity record.</description>
    <inlineHelpText>Select the Opportunity record associated with this session.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payment Sessions</relationshipLabel>
    <relationshipName>Payment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>