common/force-app/main/default/objects/Payment_Session__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the session to the associated Opportunity Product (Line Item) record.</description>
    <inlineHelpText>Select the Opportunity Product record associated with this session.</inlineHelpText>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Payment Sessions</relationshipLabel>
    <relationshipName>Payment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>