common/force-app/main/default/objects/Payment_Session__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the session to the associated Payment record.</description>
    <inlineHelpText>Select the Payment record associated with this session.</inlineHelpText>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payment Sessions</relationshipLabel>
    <relationshipName>Payment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>