common/force-app/main/default/objects/Payment_Session__c/fields/Raise__c.field-meta.xml
<CustomField>
    <fullName>Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Raise related to the payment session to help track</description>
    <inlineHelpText>Raise related to the payment session to help track</inlineHelpText>
    <label>Related Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Payment Sessions</relationshipLabel>
    <relationshipName>Payment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>