common/force-app/main/default/objects/Payment_Session__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the related account, once the user logs into the session. If the user does not login/signup during the session - this field will be empty</description>
    <inlineHelpText>This is the related account, once the user logs into the session. If the user does not login/signup during the session - this field will be empty</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Sessions</relationshipLabel>
    <relationshipName>Payment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>