common/force-app/main/default/objects/Payment_Session__c/fields/Session_Abandoned_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Session_Abandoned_DateTime__c</fullName>
    <description>Date/Time that the user exited from the payment processed (when they closed the tab)</description>
    <label>Session Abandoned DateTime</label>
    <type>DateTime</type>
</CustomField>