common/force-app/main/default/objects/Payment_Session__c/fields/Session_Amount__c.field-meta.xml
<CustomField>
    <fullName>Session_Amount__c</fullName>
    <description>The payment amount associated with the session</description>
    <label>Session Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>