common/force-app/main/default/objects/Payment_Session__c/fields/Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Session_Key__c</fullName>
    <description>A unique auto-generated name for each payment session.</description>
    <displayFormat>PS#{000000}</displayFormat>
    <inlineHelpText>Auto-generated session name for easy identification of payment sessions.</inlineHelpText>
    <label>Session Key</label>
    <type>AutoNumber</type>
</CustomField>