common/force-app/main/default/objects/Payment_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Session_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Expires__c</columns>
    <columns>Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>